# esp32-edge-firmware

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.defaults
.github/workflows/: platformio.yml
json-server/: README.md  test-device.json
main/: CMakeLists.txt  Kconfig.projbuild  can.c  can.h  config_nodes.cpp  config_nodes.h  data_nodes.cpp  data_nodes.h  emoncms.c  emoncms.h  isotp_user.c  main.c  ota.c  ota.h  provisioning.c  provisioning.h  serial.c  serial.h  stm32bl.c  stm32bl.h  ts_cbor.c  ts_cbor.h  ts_client.c  ts_client.h  ts_mqtt.c  ts_mqtt.h  ts_serial.c  ts_serial.h  web_fs.c  web_fs.h  web_server.c  web_server.h  wifi.c  wifi.h
src/: can.c  can.h  custom_conf.template.h  main.c  sdkconfig  sdkconfig.h  serial.c
test/: CMakeLists.txt  esp_err.h  main.c  test_ts_client.c  tests.h
webapp/: .eslintrc.js  .gitignore  index.html  info.json  package-lock.json  package.json  vue.config.js
webapp/public/: index.html
webapp/src/: App.vue  main.js  router.js  store.js
webapp/src/components/: EspOta.vue  LineChart.vue
webapp/src/plugins/: vuetify.js
webapp/src/views/: Config.vue  ConfigGeneral.vue  DataLog.vue  Home.vue  IO.vue  Info.vue  Live.vue  Ota.vue  OtaGeneral.vue
